Change colours on cover text section. Add some styling declarations to what and why sections on home page to fix layout issues

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,9 +9,12 @@
 
 :root {
     --white: #f5f5f5;
-    --pink: rgba(228, 137, 137, 0.9);
+    --pink: rgba(228, 137, 137, 0.8);
+    --pink-solid: rgba(228, 137, 137, 1);
     --dim-grey: rgba(109, 109, 100, 1);
-    --dark-grey: rgba(51, 51, 51, 1);
+    /* --dark-grey: rgba(51, 51, 51, 1); */
+    --dark-grey: rgba(109, 109, 100, 1);
+    --dim-grey-trans: rgba(109, 109, 100, 0.8);
 }
 
 
@@ -19,12 +22,17 @@ body {
     font-family: "raleway", sans-serif;
     font-weight: bold;
     background-color: var(--white);
-    color: var(--dim-grey)
+    color: var(--dim-grey);
+    letter-spacing: 1px;
 }
 
-h1, h2, h3 {
+h1, h2 {
     font-family: "poiret one", sans-serif;
     color: var(--dark-grey)
+}
+
+h3 {
+    font-family: "poiret one", sans-serif;  
 }
 
 a {
@@ -82,14 +90,16 @@ header {
 
 #cover-text {
     text-align: center;
-    width: 300px;
-    height:100px;
+    font-size: 1.2em;
+    width: 260px;
+    height:90px;
     border-radius: 15px;
     padding: 10px;
-    bottom: 40px;
-    right: 40px;
+    bottom: 70px;
+    right: 20px;
     vertical-align: middle;
-    background-color: var(--pink);
+    background-color: var(--dim-grey-trans);
+    color: var(--pink-solid);
     position: absolute;
 }
 
@@ -99,6 +109,7 @@ header {
     display: flex;
     flex-flow: column;
     align-items: center;
+    margin-top: 50px;
 }
 
 #why-container {
@@ -114,6 +125,11 @@ header {
     flex-grow: 1;
     text-align: center;
     /* height: 400px; */
+}
+
+.what-why-item > h2 {
+    text-decoration: underline;
+    padding-bottom: 10px;
 }
 
 /* 
